Update api to prisma, update deployment using helm charts

--- a/deployment/helm/templates/appcket/accounts.yaml
+++ b/deployment/helm/templates/appcket/accounts.yaml
@@ -80,7 +80,7 @@ spec:
   hosts:
   - {{ .Values.accounts.subdomain }}.{{ .Values.domain }}.{{ .Values.tld }}
   gateways:
-  - appcket-gateway
+  - {{ .Values.namespace }}-gateway
   tls:
   - match:
     - port: 443
