--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -1,7 +1,4 @@
 {
-  "trailingComma": "all",
-  "printWidth": 100,
-  "semi": true,
   "singleQuote": true,
-  "tabWidth": 2
+  "trailingComma": "all"
 }
