--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appcket-api",
+  "name": "api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,56 +21,44 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-query/core": "^0.22.0",
-    "@nestjs-query/query-graphql": "^0.22.0",
-    "@nestjs-query/query-typeorm": "^0.22.0",
-    "@nestjs/common": "^7.6.11",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.11",
-    "@nestjs/graphql": "^7.9.8",
-    "@nestjs/platform-express": "^7.6.11",
-    "@nestjs/typeorm": "^7.1.5",
-    "apollo-server-express": "2.19.2",
-    "class-transformer": "^0.3.2",
-    "class-validator": "^0.13.1",
-    "dataloader": "^2.0.0",
-    "express-session": "1.17.1",
-    "graphql-relay": "^0.6.0",
-    "graphql-subscriptions": "^1.2.0",
-    "graphql-tools": "7.0.2",
-    "keycloak-connect": "12.0.2",
-    "lodash": "^4.17.20",
-    "pg": "8.5.1",
+    "@nestjs/axios": "^0.0.1",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.1",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "3.0.2",
+    "apollo-server-express": "^3.1.2",
+    "express-session": "^1.17.2",
+    "graphql": "^15.5.1",
+    "keycloak-connect": "^15.0.2",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "typeorm": "^0.2.31"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.4",
-    "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.11",
-    "@types/express": "^4.17.9",
-    "@types/express-session": "^1.17.3",
-    "@types/jest": "26.0.15",
-    "@types/node": "^14.14.22",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "4.2.0",
-    "@typescript-eslint/parser": "4.2.0",
-    "eslint": "7.19.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "jest": "26.4.2",
-    "prettier": "^2.2.1",
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "27.0.6",
+    "prettier": "^2.3.2",
+    "prisma": "2.28.0",
     "supertest": "^6.1.3",
-    "ts-jest": "26.5.1",
-    "ts-loader": "^8.0.16",
-    "ts-node": "9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
-  },
-  "peerDependencies": {
-    "graphql": ">= 14.0.0"
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
