--- a/deployment/helm/templates/appcket/api.yaml
+++ b/deployment/helm/templates/appcket/api.yaml
@@ -100,7 +100,7 @@ spec:
   hosts:
   - {{ .Values.api.subdomain }}.{{ .Values.domain }}.{{ .Values.tld }}
   gateways:
-  - appcket-gateway
+  - {{ .Values.namespace }}-gateway
   tls:
   - match:
     - port: 443
