--- a/marketing/package.json
+++ b/marketing/package.json
@@ -3,29 +3,34 @@
   "version": "1.0.0",
   "private": true,
   "description": "Appcket",
+  "author": "Your Name",
   "keywords": [
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop --host=0.0.0.0 --https --key-file ./certs/tls.key --cert-file ./certs/tls.crt --ca-file ./certs/rootCA.crt",
-    "start": "gatsby develop --host=0.0.0.0 --https --key-file ./certs/tls.key --cert-file ./certs/tls.crt --ca-file ./certs/rootCA.crt",
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "gatsby-cli": "^2.19.0",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-postcss": "^3.7.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "postcss": "^8.2.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "gatsby": "^3.4.1",
+    "gatsby-plugin-emotion": "^6.6.0",
+    "gatsby-plugin-google-analytics": "^3.6.0",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-mdx": "^2.6.0",
+    "gatsby-plugin-postcss": "4.14.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.6.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   }
 }
