--- a/app/package.json
+++ b/app/package.json
@@ -3,55 +3,57 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/styles": "^4.11.3",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
+    "@mui/styles": "^5.0.1",
     "@react-keycloak/web": "^3.4.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/history": "4.6.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.12.2",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^5.0.6",
-    "@types/react-router-dom": "^5.1.6",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/history": "4.7.9",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.3",
+    "@types/react-router-dom": "^5.3.0",
     "clsx": "^1.1.1",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
-    "history": "^5.0.0",
-    "keycloak-js": "15.0.0",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.5.0",
+    "history": "^5.0.1",
+    "keycloak-js": "15.0.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.0.7",
-    "react-icons": "^4.2.0",
-    "react-query": "^3",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "^4.0.2",
-    "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2",
-    "@types/lodash": "^4.14.108",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
+    "react-helmet-async": "^1.1.2",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.25.1",
+    "react-router-dom": "^6.0.0-beta.5",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.3.3",
+    "web-vitals": "^2.1.0",
+    "@types/lodash": "^4.14.175",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-flowtype": "^6.1.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.5.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
-    "prettier-eslint-cli": "^5.0.0"
+    "eslint-webpack-plugin": "^3.0.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
