--- a/app/package.json
+++ b/app/package.json
@@ -8,37 +8,23 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^5.0.0-beta.6",
     "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.2.1",
     "@types/history": "4.7.9",
     "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.175",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.3",
     "@types/react-router-dom": "^5.3.0",
-    "clsx": "^1.1.1",
-    "graphql": "^15.6.1",
-    "graphql-request": "^3.5.0",
-    "history": "^5.0.1",
-    "keycloak-js": "15.0.2",
-    "lodash": "^4.17.21",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.1.2",
-    "react-icons": "^4.3.1",
-    "react-query": "^3.25.1",
-    "react-router-dom": "^6.0.0-beta.5",
-    "react-scripts": "^4.0.3",
-    "typescript": "^4.3.3",
-    "web-vitals": "^2.1.0",
-    "@types/lodash": "^4.14.175",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
+    "clsx": "^1.1.1",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -52,8 +38,23 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^3.0.1",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.5.0",
+    "history": "^5.0.1",
+    "keycloak-js": "15.0.2",
+    "lodash": "^4.17.21",
     "prettier-eslint": "^13.0.0",
-    "prettier-eslint-cli": "^5.0.1"
+    "prettier-eslint-cli": "^5.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.25.1",
+    "react-router-dom": "^6.0.0",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.3.3",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
