--- a/marketing/package.json
+++ b/marketing/package.json
@@ -1,36 +1,45 @@
 {
-  "name": "appcket",
-  "version": "1.0.0",
+  "name": "appcket-marketing",
   "private": true,
-  "description": "Appcket",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "version": "0.1.0",
   "author": "Your Name",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
   "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "gatsby": "^3.4.1",
-    "gatsby-plugin-emotion": "^6.6.0",
-    "gatsby-plugin-google-analytics": "^3.6.0",
-    "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-mdx": "^2.6.0",
-    "gatsby-plugin-postcss": "4.14.0",
-    "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-sharp": "^3.6.0",
-    "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-transformer-sharp": "^3.6.0",
+    "gatsby": "^4.1.3",
+    "gatsby-plugin-gatsby-cloud": "^4.1.1",
+    "gatsby-plugin-image": "^2.1.1",
+    "gatsby-plugin-manifest": "^4.1.2",
+    "gatsby-plugin-offline": "^5.1.2",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.2",
+    "gatsby-source-filesystem": "^4.1.1",
+    "gatsby-transformer-sharp": "^4.1.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "0BSD",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "gatsby develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
