--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-hook-form": "^7.21.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.32.3",
     "react-router-dom": "^6.0.2",
