--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -14,10 +14,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "jest --config ./test/jest.config.json",
+    "test:watch": "jest --watch --config ./test/jest.config.json",
+    "test:cov": "jest --coverage --config ./test/jest.config.json",
+    "test:debug": "node -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./test/jest.config.json",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.2.0",
     "@prisma/client": "3.4.2",
     "apollo-server-express": "^3.5.0",
+    "class-validator": "^0.13.2",
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "keycloak-connect": "^15.1.0",
@@ -51,6 +52,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "27.3.1",
+    "jest-when": "^3.5.0",
     "prettier": "^2.4.1",
     "prisma": "3.4.2",
     "supertest": "^6.1.6",
