--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "3.4.2",
     "apollo-server-express": "^3.5.0",
     "class-validator": "^0.13.2",
+    "class-transformer": "^0.5.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "keycloak-connect": "^15.1.0",
