Update team name with validation and redirect to ViewTeams on success

--- a/app/package.json
+++ b/app/package.json
@@ -41,8 +41,9 @@
     "graphql": "^15.6.1",
     "graphql-request": "^3.6.1",
     "history": "^5.1.0",
-    "keycloak-js": "15.1.0",
+    "keycloak-js": "16.1.0",
     "lodash": "^4.17.21",
+    "notistack": "^2.0.3",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "prop-types": "^15.7.2",
