--- a/app/package.json
+++ b/app/package.json
@@ -56,7 +56,8 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "^4.0.3",
     "typescript": "^4.4.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "zustand": "^3.6.9"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
