--- a/app/package.json
+++ b/app/package.json
@@ -21,25 +21,26 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
-    "eslint-config-airbnb": "19.0.0",
-    "eslint-config-airbnb-typescript": "^15.0.0",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^25.2.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
     "graphql": "^15.6.1",
-    "graphql-request": "^3.6.1",
+    "graphql-request": "^3.7.0",
     "history": "^5.1.0",
     "keycloak-js": "16.1.0",
     "lodash": "^4.17.21",
@@ -54,10 +55,12 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.32.3",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "^4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^2.1.2",
     "zustand": "^3.6.9"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
