--- a/app/package.json
+++ b/app/package.json
@@ -6,13 +6,10 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.0",
+    "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.1.0",
-    "@mui/styles": "^5.1.0",
     "@mui/x-data-grid": "^5.0.0-beta.6",
     "@react-keycloak/web": "^3.4.0",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "@types/history": "4.7.9",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.177",
@@ -21,10 +18,31 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.2",
+    "clsx": "^1.1.1",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.7.0",
+    "history": "^5.1.0",
+    "keycloak-js": "16.1.0",
+    "lodash": "^4.17.21",
+    "notistack": "^2.0.3",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-custom-scrollbars-2": "4.4.0",
+    "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
+    "react-hook-form": "^7.21.2",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.32.3",
+    "react-router-dom": "^6.1.1",
+    "web-vitals": "^2.1.2",
+    "zustand": "^3.6.9"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "babel-eslint": "^10.1.0",
-    "clsx": "^1.1.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -39,28 +57,11 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
-    "graphql": "^15.6.1",
-    "graphql-request": "^3.7.0",
-    "history": "^5.1.0",
-    "keycloak-js": "16.1.0",
-    "lodash": "^4.17.21",
-    "notistack": "^2.0.3",
+    "babel-eslint": "^10.1.0",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.1.2",
-    "react-hook-form": "^7.21.2",
-    "react-icons": "^4.3.1",
-    "react-query": "^3.32.3",
-    "react-router-dom": "^6.1.1",
-    "typescript": "^4.4.4",
-    "web-vitals": "^2.1.2",
-    "zustand": "^3.6.9"
-  },
-  "devDependencies": {
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
