--- a/app/package.json
+++ b/app/package.json
@@ -3,47 +3,47 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.6.0",
+    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/lab": "^5.0.0-alpha.64",
-    "@mui/material": "^5.1.0",
-    "@mui/x-data-grid": "^5.0.0-beta.6",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@mui/x-data-grid": "^5.3.0",
     "@react-keycloak/web": "^3.4.0",
-    "@types/history": "4.7.9",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.177",
+    "@types/history": "5.0.0",
+    "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.7",
-    "@types/react": "^17.0.35",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/react-helmet": "^6.1.4",
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router-dom": "^5.3.3",
     "clsx": "^1.1.1",
     "graphql": "^15.6.1",
     "graphql-request": "^3.7.0",
-    "history": "^5.1.0",
+    "history": "^5.2.0",
     "keycloak-js": "16.1.0",
     "lodash": "^4.17.21",
     "notistack": "^2.0.3",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-custom-scrollbars-2": "4.4.0",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.1.2",
-    "react-hook-form": "^7.21.2",
+    "react-helmet-async": "^1.2.2",
+    "react-hook-form": "^7.25.0",
     "react-icons": "^4.3.1",
-    "react-query": "^3.32.3",
-    "react-router-dom": "^6.1.1",
-    "web-vitals": "^2.1.2",
+    "react-query": "^3.34.12",
+    "react-router-dom": "^6.2.1",
+    "web-vitals": "^2.1.4",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
@@ -51,7 +51,7 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^25.2.4",
+    "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
