--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.2.6",
     "@nestjs/config": "^1.1.6",
@@ -33,7 +34,7 @@
     "class-transformer": "^0.5.1",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
-    "keycloak-connect": "^16.1.0",
+    "keycloak-connect": "^16.1.1",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
