--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "appcket-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,15 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "axios": "^0.25.0",
-    "@nestjs/axios": "^0.0.5",
-    "@nestjs/common": "^8.2.6",
-    "@nestjs/config": "^1.1.6",
-    "@nestjs/core": "^8.2.6",
-    "@nestjs/graphql": "^9.1.2",
-    "@nestjs/platform-express": "^8.2.6",
-    "@prisma/client": "3.8.1",
-    "apollo-server-express": "^3.6.2",
+    "axios": "^0.26.0",
+    "@nestjs/apollo": "^10.0.9",
+    "@nestjs/axios": "^0.0.7",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/graphql": "^10.0.10",
+    "@nestjs/platform-express": "^8.4.4",
+    "@prisma/client": "3.13.0",
+    "apollo-server-express": "^3.6.7",
     "class-validator": "^0.13.2",
     "class-transformer": "^0.5.1",
     "express-session": "^1.17.2",
@@ -38,31 +39,31 @@
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.2"
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.0",
-    "@nestjs/schematics": "^8.0.5",
-    "@nestjs/testing": "^8.2.6",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/schematics": "^8.0.10",
+    "@nestjs/testing": "^8.4.4",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.7",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "27.4.7",
     "jest-when": "^3.5.0",
-    "prettier": "^2.5.1",
-    "prisma": "3.8.1",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.4.4"
+    "prettier": "^2.6.2",
+    "prisma": "3.13.0",
+    "supertest": "^6.2.3",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.2.9",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
+    "typescript": "^4.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
