--- a/app/.env.production
+++ b/app/.env.production
@@ -1,3 +1,4 @@
 PUBLIC_URL=https://app.appcket.com
+REACT_APP_APP_URL=https://app.appcket.com
 REACT_APP_API_URL=https://api.appcket.com
 REACT_APP_ACCOUNTS_URL=https://accounts.appcket.com
