--- a/app/package.json
+++ b/app/package.json
@@ -3,62 +3,62 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.79",
-    "@mui/material": "^5.6.3",
-    "@mui/x-data-grid": "^5.10.0",
-    "@react-keycloak/web": "^3.4.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.92",
+    "@mui/material": "^5.9.2",
+    "@mui/x-data-grid": "^5.14.0",
     "@types/history": "5.0.0",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^16.11.7",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.0",
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
-    "clsx": "^1.1.1",
-    "graphql": "^16.4.0",
-    "graphql-request": "^4.2.0",
+    "clsx": "^1.2.1",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "history": "^5.3.0",
-    "keycloak-js": "18.0.0",
     "lodash": "^4.17.21",
-    "notistack": "^2.0.4",
+    "notistack": "^2.0.5",
+    "oidc-client-ts": "^2.0.5",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-custom-scrollbars-2": "4.4.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-custom-scrollbars-2": "4.5.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.30.0",
-    "react-icons": "^4.3.1",
+    "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
+    "react-oidc-context": "^2.1.1",
     "react-query": "^3.38.0",
     "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^3.7.1"
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.1.5",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "babel-eslint": "^10.1.0",
-    "prettier-eslint": "^14.0.1",
-    "prettier-eslint-cli": "^5.0.1",
+    "eslint-plugin-jest": "^26.6.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
+    "prettier-eslint": "^15.0.1",
+    "prettier-eslint-cli": "^6.0.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
