--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.92",
     "@mui/material": "^5.9.2",
     "@mui/x-data-grid": "^5.14.0",
+    "@tanstack/react-query": "^4.0.10",
     "@types/history": "5.0.0",
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.182",
@@ -32,12 +33,12 @@
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-oidc-context": "^2.1.1",
-    "react-query": "^3.38.0",
     "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
