--- a/app/.env.production
+++ b/app/.env.production
@@ -1,3 +1,3 @@
 VITE_APP_URL=https://app.appcket.com
-VITE_API_URL_URL=https://api.appcket.com
+VITE_API_URL=https://api.appcket.com
 VITE_ACCOUNTS_URL=https://accounts.appcket.com
