--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,7 @@
     "react-router-dom": "^6.3.0",
     "vite-plugin-svgr": "2.2.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.0.0"
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@emotion/react": "^11.10.0",
@@ -72,6 +72,7 @@
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "react-test-renderer": "^18.2.0",
+    "simple-zustand-devtools": "^1.1.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "28.0.7",
     "typescript": "^4.7.4",
