--- a/marketing/package.json
+++ b/marketing/package.json
@@ -1,45 +1,26 @@
 {
   "name": "appcket-marketing",
+  "version": "0.0.1",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Your Name",
-  "dependencies": {
-    "gatsby": "^4.1.3",
-    "gatsby-plugin-gatsby-cloud": "^4.1.1",
-    "gatsby-plugin-image": "^2.1.1",
-    "gatsby-plugin-manifest": "^4.1.2",
-    "gatsby-plugin-offline": "^5.1.2",
-    "gatsby-plugin-react-helmet": "^5.1.0",
-    "gatsby-plugin-sharp": "^4.1.2",
-    "gatsby-source-filesystem": "^4.1.1",
-    "gatsby-transformer-sharp": "^4.1.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^1.0.0",
+    "@tailwindcss/typography": "^0.5.7",
+    "postcss": "^8.4.16"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "gatsby develop -p 3000 -H 0.0.0.0 --https --key-file ./certs/tls.key --cert-file ./certs/tls.crt",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "dependencies": {
+    "astro": "^1.2.2",
+    "astro-icon": "^0.7.3",
+    "daisyui": "^2.27.0",
+    "luxon": "^3.0.3",
+    "prettier-plugin-astro": "^0.5.4",
+    "theme-change": "^2.2.0"
   }
 }
