--- a/deployment/database/package.json
+++ b/deployment/database/package.json
@@ -8,18 +8,31 @@
     "@prisma/client": "^3.8.1"
   },
   "devDependencies": {
-    "@types/node": "^12.20.37",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/node": "^14.18.30",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "dotenv-cli": "^4.1.0",
+    "dotenv-cli": "^6.0.0",
     "prettier": "^2.5.1",
     "prisma": "^3.8.1",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
+    "@mikro-orm/cli": "^5.4.3-dev.24",
+    "@mikro-orm/core": "^5.4.3-dev.24",
+    "@mikro-orm/entity-generator": "^5.4.3-dev.24",
+    "@mikro-orm/migrations": "^5.4.3-dev.24",
+    "@mikro-orm/postgresql": "^5.4.3-dev.24",
+    "@mikro-orm/seeder": "^5.4.3-dev.24",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.9.1-beta"
   },
-  "prisma": {
-    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  "scripts": {
+    "schema-seed": "mikro-orm schema:fresh --run --seed",
+    "post-seed": "ts-node ./postSeed"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./mikro-orm.config.ts"
+    ]
   }
 }
