--- a/deployment/helm/values-local.yaml
+++ b/deployment/helm/values-local.yaml
@@ -33,10 +33,11 @@ app:
 
 database:
   address: 172.17.0.1
-  port: 5432
+  port: "5432"
   secretName: database-secret
-  database: appcket
-  schema: keycloak
+  name: appcket
+  schemaAccounts: keycloak
+  schemaApp: appcket
   vendor: postgres
 
 marketing:
