Create and Update operations use MikroOrm
Add and configure Pino for logging

--- a/deployment/helm/templates/appcket/api.yaml
+++ b/deployment/helm/templates/appcket/api.yaml
@@ -66,7 +66,7 @@ spec:
         - name: DB_SCHEMA
           value: {{ .Values.database.schemaApp }}
         - name: DB_PORT
-          value: {{ .Values.database.port }}
+          value: "{{ .Values.database.port }}"
         - name: KEYCLOAK_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
