--- a/deployment/helm/values-local.yaml
+++ b/deployment/helm/values-local.yaml
@@ -33,7 +33,7 @@ app:
 
 database:
   address: 172.17.0.1
-  port: "5432"
+  port: 5432
   secretName: database-secret
   name: appcket
   schemaAccounts: keycloak
