--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,6 @@
     "@nestjs/core": "^9.1.2",
     "@nestjs/graphql": "^10.1.2",
     "@nestjs/platform-express": "^9.1.2",
-    "@prisma/client": "4.1.0",
     "apollo-server-express": "^3.10.2",
     "class-validator": "^0.13.2",
     "class-transformer": "^0.5.1",
@@ -40,6 +39,8 @@
     "graphql": "^16.6.0",
     "keycloak-connect": "^19.0.2",
     "lodash": "^4.17.21",
+    "nestjs-pino": "^3.1.1",
+    "pino-http": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7"
@@ -60,7 +61,6 @@
     "jest": "28.1.3",
     "jest-when": "^3.5.1",
     "prettier": "^2.7.1",
-    "prisma": "4.1.0",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
