feat: app to use vitest instead of jest

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,9 +7,9 @@ WORKDIR /src
 
 COPY . /src
 
-RUN npm install --legacy-peer-deps
+RUN yarn install
 
-RUN npm run build
+RUN yarn build
 
 FROM nginx:stable-alpine
 
