--- a/app/package.json
+++ b/app/package.json
@@ -38,21 +38,21 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@tanstack/react-query-devtools": "^4.0.10",
-    "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/history": "5.0.0",
-    "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "@vitejs/plugin-react": "^1.3.2",
+    "@vitest/ui": "^0.25.2",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
@@ -60,32 +60,31 @@
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.6.0",
-    "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
-    "jest": "29.3.0",
-    "jest-environment-jsdom": "^29.3.0",
+    "happy-dom": "^7.7.0",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "react-test-renderer": "^18.2.0",
     "simple-zustand-devtools": "^1.1.0",
     "tailwindcss": "^3.2.2",
-    "ts-jest": "29.0.3",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
+    "vitest": "^0.25.2",
     "vite-tsconfig-paths": "^3.5.0"
   },
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "test": "jest",
     "serve": "vite preview",
     "lint": "eslint --cache ./src",
-    "format": "prettier --write --ignore-unknown ."
+    "format": "prettier --write --ignore-unknown .",
+    "test": "vitest --mode development",
+    "coverage": "vitest run --coverage --mode development",
+    "test:ui": "vitest --ui --mode development"
   },
   "browserslist": {
     "production": [
