--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.9",
     "@mui/x-data-grid": "^5.17.7",
+    "@mui/system": "5.11.2",
     "@tanstack/react-query": "^4.12.0",
     "clsx": "^1.2.1",
     "graphql": "^16.6.0",
