--- a/app/package.json
+++ b/app/package.json
@@ -33,9 +33,7 @@
     "react-router-dom": "^6.4.3",
     "vite-plugin-svgr": "2.2.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.1.1"
-  },
-  "devDependencies": {
+    "zustand": "^4.1.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@tanstack/react-query-devtools": "^4.0.10",
