--- a/deployment/helm/values-production.yaml
+++ b/deployment/helm/values-production.yaml
@@ -36,6 +36,7 @@ database:
   schemaAccounts: keycloak
   schemaApp: appcket
   vendor: postgres
+  sslMode: true
 
 marketing:
   name: marketing
@@ -48,11 +49,11 @@ image:
   repository: localhost:5000
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: 'latest'
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: ''
+fullnameOverride: ''
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -61,7 +62,7 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  name: ''
 
 podAnnotations: {}
 
