Record history of entities via change audit system

--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -3,5 +3,8 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": false,
   "prettier.jsxSingleQuote": false,
-  "prettier.singleQuote": true
+  "prettier.singleQuote": true,
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
