--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "keycloak-connect": "^20.0.2",
+    "json-diff-ts": "^1.2.5",
     "lodash": "^4.17.21",
     "nestjs-pino": "^3.1.1",
     "pino-http": "^8.2.1",
@@ -58,11 +59,11 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "28.1.3",
-    "jest-when": "^3.5.1",
+    "jest": "29.5.0",
+    "jest-when": "^3.5.2",
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.0.0",
