--- a/api/package.json
+++ b/api/package.json
@@ -21,53 +21,54 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mikro-orm/core": "5.4.2",
-    "@mikro-orm/nestjs": "5.1.2",
-    "@mikro-orm/postgresql": "5.4.2",
-    "@nestjs/apollo": "^10.1.0",
-    "@nestjs/axios": "^1.0.1",
-    "@nestjs/cli": "^9.1.4",
-    "@nestjs/common": "^9.1.2",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.1.2",
-    "@nestjs/graphql": "^10.1.2",
-    "@nestjs/platform-express": "^9.1.2",
-    "apollo-server-express": "^3.10.2",
+    "@mikro-orm/core": "^5.7.12",
+    "@mikro-orm/nestjs": "^5.1.8",
+    "@mikro-orm/postgresql": "^5.7.12",
+    "@nestjs/apollo": "^11.0.6",
+    "@apollo/server": "^4.7.3",
+    "@nestjs/axios": "^2.0.0",
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/common": "^9.4.2",
+    "@nestjs/config": "^2.3.2",
+    "@nestjs/core": "^9.4.2",
+    "@nestjs/graphql": "^11.0.6",
+    "@nestjs/platform-express": "^9.4.2",
+    "apollo-server-express": "^3.12.0",
     "ca-append": "^0.1.0",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
-    "keycloak-connect": "^20.0.2",
-    "json-diff-ts": "^1.2.5",
+    "keycloak-connect": "^21.1.1",
+    "json-diff-ts": "^1.2.6",
     "lodash": "^4.17.21",
-    "nestjs-pino": "^3.1.1",
-    "pino-http": "^8.2.1",
+    "nestjs-pino": "^3.2.0",
+    "pino-http": "^8.3.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.7"
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.2",
-    "@types/express": "^4.17.14",
-    "@types/jest": "^28.1.6",
+    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/testing": "^9.4.2",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/node": "^18.7.23",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "29.5.0",
     "jest-when": "^3.5.2",
-    "prettier": "^2.7.1",
-    "supertest": "^6.2.4",
+    "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.3.1",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
