Show entity history
Query api for change audit history for an entity and show in app component

--- a/app/.vscode/settings.json
+++ b/app/.vscode/settings.json
@@ -4,5 +4,8 @@
   "editor.formatOnSave": true,
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.tabSize": 2,
-  "prettier.documentSelectors": ["*.{tsx,ts}", "*.{jsx,js}"]
+  "prettier.documentSelectors": ["*.{tsx,ts}", "*.{jsx,js}"],
+  "prettier.jsxSingleQuote": false,
+  "prettier.singleQuote": true,
+  "prettier.prettierPath": "./node_modules/prettier"
 }
