--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -2,7 +2,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": false,
-  "prettier.jsxSingleQuote": false,
+  "prettier.prettierPath": "./node_modules/prettier",
   "prettier.singleQuote": true,
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
