--- a/app/package.json
+++ b/app/package.json
@@ -18,9 +18,10 @@
     "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
     "history": "^5.3.0",
+    "@textea/json-viewer": "^3.2.3",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
-    "oidc-client-ts": "^2.2.5",
+    "oidc-client-ts": "^2.4.0",
     "prop-types": "^15.8.1",
     "rc-scrollbars": "1.1.6",
     "react": "^18.2.0",
