Update marketing site

--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
     "json-diff-ts": "^4.8.1",
     "lodash": "^4.17.21",
     "nestjs-pino": "^4.4.0",
+    "postgraphile": "beta",
     "pino-http": "^10.5.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
@@ -63,7 +64,7 @@
     "jest": "30.0.4",
     "jest-when": "^3.7.0",
     "prettier": "^3.6.2",
-    "supertest": "^7.1.1",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
