--- a/api/package.json
+++ b/api/package.json
@@ -21,52 +21,54 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mikro-orm/core": "^6.4.16",
+    "@apollo/server": "^5.0.0",
+    "@as-integrations/express5": "^1.1.2",
+    "@mikro-orm/core": "^6.5.7",
     "@mikro-orm/nestjs": "^6.1.1",
-    "@mikro-orm/postgresql": "^6.4.16",
-    "@nestjs/apollo": "^13.1.0",
-    "@apollo/server": "^4.12.2",
-    "@nestjs/axios": "^4.0.0",
-    "@nestjs/cli": "^11.0.7",
-    "@nestjs/common": "^11.1.3",
+    "@mikro-orm/postgresql": "^6.5.7",
+    "@nestjs/apollo": "^13.2.1",
+    "@nestjs/axios": "^4.0.1",
+    "@nestjs/cli": "^11.0.10",
+    "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/graphql": "^13.1.0",
-    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/graphql": "^13.2.0",
+    "@nestjs/platform-express": "^11.1.6",
+    "axios": "1.12.2",
     "apollo-server-express": "^3.13.0",
     "ca-append": "^0.1.0",
     "class-validator": "^0.14.2",
     "class-transformer": "^0.5.1",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "graphql": "^16.11.0",
     "keycloak-connect": "^26.1.1",
-    "json-diff-ts": "^4.8.1",
+    "json-diff-ts": "^4.8.2",
     "lodash": "^4.17.21",
-    "nestjs-pino": "^4.4.0",
+    "nestjs-pino": "^4.4.1",
     "postgraphile": "beta",
-    "pino-http": "^10.5.0",
+    "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^11.0.5",
-    "@nestjs/testing": "^11.1.3",
+    "@nestjs/schematics": "^11.0.8",
+    "@nestjs/testing": "^11.1.6",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
-    "@types/node": "^22.15.18",
+    "@types/node": "^24.7.0",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.35.1",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.1",
-    "jest": "30.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "30.2.0",
     "jest-when": "^3.7.0",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.0",
-    "ts-loader": "^9.5.2",
+    "ts-jest": "^29.4.4",
+    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
