--- a/marketing/.vscode/launch.json
+++ b/marketing/.vscode/launch.json
@@ -1,11 +1,16 @@
 {
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "./node_modules/.bin/astro dev",
-      "name": "Development server",
+      "name": "Start marketing",
+      "type": "node-terminal",
       "request": "launch",
-      "type": "node-terminal"
+      "command": "pnpm dev",
+      "cwd": "${workspaceFolder}",
+      "env": {
+        "FORCE_COLOR": "1"
+      }
     }
   ]
 }
