--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "url": "git+https://github.com/appcket/appcket-org.git"
   },
   "dependencies": {
+    "@dr.pogodin/react-helmet": "^3.0.4",
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "^7.3.4",
@@ -23,7 +24,6 @@
     "i18next": "^25.3.0",
     "i18next-http-backend": "^3.0.2",
     "i18next-browser-languagedetector": "^8.2.0",
-    "lodash": "^4.17.21",
     "notistack": "^3.0.2",
     "oidc-client-ts": "^3.3.0",
     "prop-types": "^15.8.1",
@@ -31,7 +31,6 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
-    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.64.0",
     "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
@@ -52,8 +51,8 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/lodash": "^4.17.20",
     "@types/node": "^24.7.1",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/react-helmet": "^6.1.11",
@@ -67,9 +66,7 @@
     "csstype": "^3.1.3",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.5.4",
