Update deployment and build process

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,14 +1,25 @@
-FROM node:24 AS node
+FROM node:24-slim AS base
 
 ARG env=production
 ENV NODE_ENV=$env
+
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
 
 WORKDIR /src
 
 COPY . /src
 
-RUN npm install
+FROM base AS prod-deps
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
 
-RUN npm run build
+FROM base AS build
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+RUN pnpm run build
+
+FROM base
+COPY --from=prod-deps /src/node_modules /src/node_modules
+COPY --from=build /src/dist /src/dist
 
 CMD ["node", "dist/main"]
