--- a/deployment/helm/templates/appcket/marketing.yaml
+++ b/deployment/helm/templates/appcket/marketing.yaml
@@ -48,14 +48,19 @@ spec:
         stdin: true
         tty: true
         workingDir: /src
+        {{- if eq .Values.env "local" }}
         volumeMounts:
           - mountPath: /src
             name: src-volume
             readOnly: false
+        {{- end }}
+      {{- if eq .Values.env "local" }}
       volumes:
       - hostPath:
-          path: /run/desktop/mnt/host/wsl/docker-desktop-bind-mounts/Ubuntu/dev/appcket/marketing
+          path: /host_mnt/home/ryan/dev/appcket-org/main/marketing
+          type: DirectoryOrCreate
         name: src-volume
+      {{- end }}
 ---
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
