--- a/deployment/helm/values-local.yaml
+++ b/deployment/helm/values-local.yaml
@@ -32,7 +32,7 @@ app:
   # image: appcket_marketing
 
 database:
-  address: 172.17.0.1
+  address: host.docker.internal
   port: 5432
   secretName: database-secret
   name: appcket
