--- a/deployment/helm/templates/appcket/app.yaml
+++ b/deployment/helm/templates/appcket/app.yaml
@@ -66,7 +66,7 @@ spec:
       {{- if eq .Values.env "local" }}
       volumes:
       - hostPath:
-          path: /host_mnt/home/ryan/dev/appcket-org/main/app
+          path: {{ .Values.app.hostPath }}
           type: DirectoryOrCreate
         name: src-volume
       {{- end }}
