--- a/deployment/helm/templates/appcket/marketing.yaml
+++ b/deployment/helm/templates/appcket/marketing.yaml
@@ -57,7 +57,7 @@ spec:
       {{- if eq .Values.env "local" }}
       volumes:
       - hostPath:
-          path: /host_mnt/home/ryan/dev/appcket-org/main/marketing
+          path: {{ .Values.marketing.hostPath }}
           type: DirectoryOrCreate
         name: src-volume
       {{- end }}
