File reorganization and Istio ambient mode related updates

--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.defaultFormatter": "prettier.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": false,
   "prettier.prettierPath": "./node_modules/prettier",
   "prettier.singleQuote": true,
   "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "prettier.prettier-vscode"
   }
 }
