--- a/api/package.json
+++ b/api/package.json
@@ -21,51 +21,52 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@apollo/server": "^5.1.0",
+    "@apollo/server": "^5.2.0",
     "@as-integrations/express5": "^1.1.2",
-    "@mikro-orm/core": "^6.5.9",
+    "@mikro-orm/core": "^6.6.2",
     "@mikro-orm/nestjs": "^6.1.1",
-    "@mikro-orm/postgresql": "^6.5.9",
-    "@nestjs/apollo": "^13.2.1",
+    "@mikro-orm/postgresql": "^6.6.2",
+    "@nestjs/apollo": "^13.2.3",
     "@nestjs/axios": "^4.0.1",
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/common": "^11.1.8",
+    "@nestjs/cli": "^11.0.14",
+    "@nestjs/common": "^11.1.10",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.8",
-    "@nestjs/graphql": "^13.2.0",
-    "@nestjs/platform-express": "^11.1.8",
-    "axios": "1.13.1",
+    "@nestjs/core": "^11.1.10",
+    "@nestjs/graphql": "^13.2.3",
+    "@nestjs/platform-express": "^11.1.10",
+    "@nestjs/microservices": "^11.1.10",
+    "axios": "1.13.2",
     "ca-append": "^0.1.0",
-    "class-validator": "^0.14.2",
+    "class-validator": "^0.14.3",
     "class-transformer": "^0.5.1",
     "express-session": "^1.18.2",
-    "graphql": "^16.11.0",
+    "graphql": "^16.12.0",
+    "kafkajs": "^2.2.4",
     "keycloak-connect": "^26.1.1",
     "json-diff-ts": "^4.8.2",
-    "nestjs-pino": "^4.4.1",
-    "postgraphile": "beta",
+    "nestjs-pino": "^4.5.0",
     "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2",
-    "rimraf": "^6.0.1",
+    "rimraf": "^6.1.2",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^11.0.9",
-    "@nestjs/testing": "^11.1.8",
-    "@types/express": "^5.0.5",
+    "@nestjs/testing": "^11.1.10",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.9.2",
+    "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.38.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "30.2.0",
     "jest-when": "^3.7.0",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.5",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
